# rust-stemmers

./: Cargo.toml  README.md  README.org  test.sh
algorithms/: LICENSE  README.md  README.org  finnish.sbl  italian.sbl  russian.sbl
examples/stem-file/: main.rs
src/: combined.rs  combined.sbl  english.rs  french.rs  french.sbl  german.rs  german.sbl  italian.rs  lib.rs  portuguese.rs  portuguese.sbl  romanian.rs  romanian.sbl  simple_insert.rs  simple_insert.sbl  simple_replace.rs  simple_replace.sbl  simple_substring.rs  simple_substring.sbl  small_test.sbl.rs  spanish.rs  spanish.sbl
src/snowball/: among.rs  snowball_env.rs
src/snowball/algorithms/: arabic.rs  armenian.rs  basque.rs  catalan.rs  danish.rs  dutch.rs  english.rs  finnish.rs  french.rs  german.rs  greek.rs  hindi.rs  hungarian.rs  indonesian.rs  irish.rs  italian.rs  lithuanian.rs  mod.rs  nepali.rs  norwegian.rs  portuguese.rs  romanian.rs  russian.rs  serbian.rs  spanish.rs  swedish.rs  tamil.rs  turkish.rs
test_data/: README  res_ar.txt  res_el.txt  voc_ar.txt  voc_el.txt
