[package]
name = "rust-stemmers"
version = "0.1.0"
authors = ["Jakob Demler <jdemler@curry-software.com>"]
description = "A rust implementation of some popular snowball stemming algorithms"
repository = "https://github.com/JDemler/rust-stemmers"
readme = "README.md"
keywords = ["nlp", "stemming", "information", "retrieval", "language"]
license = "MIT/BSD-3-Clause"

[dependencies]
serde = "*"
serde_derive = "*"

