[package]
name = "rust-stemmers"
version = "1.2.0"
authors = ["Jakob Demler <jdemler@curry-software.com>", "CurrySoftware <info@curry-software.com>"]
description = "A rust implementation of some popular snowball stemming algorithms"
repository = "https://github.com/CurrySoftware/rust-stemmers"
readme = "README.md"
keywords = ["nlp", "stemming", "information", "retrieval", "language"]
license = "MIT/BSD-3-Clause"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
